crates/query/src/snapshots/kclvm_query__tests__list_all_variables.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "_list0": [
    {
      "name": "_list0",
      "type_name": "",
      "op_sym": "=",
      "value": "[\n    1\n    2\n    3\n]",
      "list_items": [
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "1",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "2",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "3",
          "list_items": [],
          "dict_entries": []
        }
      ],
      "dict_entries": []
    }
  ],
  "_list1": [
    {
      "name": "_list1",
      "type_name": "",
      "op_sym": "=",
      "value": "[\n    4\n    5\n    6\n]",
      "list_items": [
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "4",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "5",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "6",
          "list_items": [],
          "dict_entries": []
        }
      ],
      "dict_entries": []
    }
  ],
  "_part1": [
    {
      "name": "_part1",
      "type_name": "",
      "op_sym": "=",
      "value": "{\n    a = \"b\"\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "a",
          "value": {
            "name": "a",
            "type_name": "",
            "op_sym": "=",
            "value": "\"b\"",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ],
  "_part2": [
    {
      "name": "_part2",
      "type_name": "",
      "op_sym": "=",
      "value": "{\n    c = \"d\"\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "c",
          "value": {
            "name": "c",
            "type_name": "",
            "op_sym": "=",
            "value": "\"d\"",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ],
  "a": [
    {
      "name": "a",
      "type_name": "",
      "op_sym": "=",
      "value": "1",
      "list_items": [],
      "dict_entries": []
    }
  ],
  "a1": [
    {
      "name": "a1",
      "type_name": "",
      "op_sym": "=",
      "value": "2",
      "list_items": [],
      "dict_entries": []
    }
  ],
  "a3": [
    {
      "name": "a3",
      "type_name": "",
      "op_sym": "=",
      "value": "3m",
      "list_items": [],
      "dict_entries": []
    }
  ],
  "a_dict": [
    {
      "name": "a_dict",
      "type_name": "",
      "op_sym": "=",
      "value": "{\n    **_part1\n    **_part2\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "",
          "value": {
            "name": "",
            "type_name": "",
            "op_sym": ":",
            "value": "_part1",
            "list_items": [],
            "dict_entries": []
          }
        },
        {
          "key": "",
          "value": {
            "name": "",
            "type_name": "",
            "op_sym": ":",
            "value": "_part2",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ],
  "array1": [
    {
      "name": "array1",
      "type_name": "",
      "op_sym": "=",
      "value": "[\n    1\n    2\n    3\n]",
      "list_items": [
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "1",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "2",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "3",
          "list_items": [],
          "dict_entries": []
        }
      ],
      "dict_entries": []
    }
  ],
  "b1": [
    {
      "name": "b1",
      "type_name": "",
      "op_sym": "=",
      "value": "True",
      "list_items": [],
      "dict_entries": []
    }
  ],
  "b2": [
    {
      "name": "b2",
      "type_name": "",
      "op_sym": "=",
      "value": "False",
      "list_items": [],
      "dict_entries": []
    }
  ],
  "c": [
    {
      "name": "c",
      "type_name": "C",
      "op_sym": "=",
      "value": "C {\n    a: {name: \"Hello\"}\n    a: {ids: [7, 8, 9]}\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "a",
          "value": {
            "name": "a",
            "type_name": "",
            "op_sym": ":",
            "value": "{\n    name: \"Hello\"\n}",
            "list_items": [],
            "dict_entries": [
              {
                "key": "name",
                "value": {
                  "name": "name",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "\"Hello\"",
                  "list_items": [],
                  "dict_entries": []
                }
              }
            ]
          }
        },
        {
          "key": "a",
          "value": {
            "name": "a",
            "type_name": "",
            "op_sym": ":",
            "value": "{\n    ids: [7, 8, 9]\n}",
            "list_items": [],
            "dict_entries": [
              {
                "key": "ids",
                "value": {
                  "name": "ids",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "[\n    7\n    8\n    9\n]",
                  "list_items": [
                    {
                      "name": "",
                      "type_name": "",
                      "op_sym": "",
                      "value": "7",
                      "list_items": [],
                      "dict_entries": []
                    },
                    {
                      "name": "",
                      "type_name": "",
                      "op_sym": "",
                      "value": "8",
                      "list_items": [],
                      "dict_entries": []
                    },
                    {
                      "name": "",
                      "type_name": "",
                      "op_sym": "",
                      "value": "9",
                      "list_items": [],
                      "dict_entries": []
                    }
                  ],
                  "dict_entries": []
                }
              }
            ]
          }
        }
      ]
    }
  ],
  "dict1": [
    {
      "name": "dict1",
      "type_name": "",
      "op_sym": "=",
      "value": "{\n    \"a\": 1\n    \"b\": 2\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "a",
          "value": {
            "name": "a",
            "type_name": "",
            "op_sym": ":",
            "value": "1",
            "list_items": [],
            "dict_entries": []
          }
        },
        {
          "key": "b",
          "value": {
            "name": "b",
            "type_name": "",
            "op_sym": ":",
            "value": "2",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ],
  "dict2": [
    {
      "name": "dict2",
      "type_name": "",
      "op_sym": "=",
      "value": "{\n    \"a\": 1\n    \"b\": {\n        \"c\": 2\n        \"d\": 3\n    }\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "a",
          "value": {
            "name": "a",
            "type_name": "",
            "op_sym": ":",
            "value": "1",
            "list_items": [],
            "dict_entries": []
          }
        },
        {
          "key": "b",
          "value": {
            "name": "b",
            "type_name": "",
            "op_sym": ":",
            "value": "{\n    \"c\": 2\n    \"d\": 3\n}",
            "list_items": [],
            "dict_entries": [
              {
                "key": "c",
                "value": {
                  "name": "c",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "2",
                  "list_items": [],
                  "dict_entries": []
                }
              },
              {
                "key": "d",
                "value": {
                  "name": "d",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "3",
                  "list_items": [],
                  "dict_entries": []
                }
              }
            ]
          }
        }
      ]
    }
  ],
  "job": [
    {
      "name": "job",
      "type_name": "Job",
      "op_sym": "=",
      "value": "Job {\n    name = \"{}-{}\".format(\"app\", \"test\").lower()\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "name",
          "value": {
            "name": "name",
            "type_name": "",
            "op_sym": "=",
            "value": "\"{}-{}\".format(\"app\", \"test\").lower()",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ],
  "s1": [
    {
      "name": "s1",
      "type_name": "",
      "op_sym": "=",
      "value": "\"Hello\"",
      "list_items": [],
      "dict_entries": []
    }
  ],
  "select": [
    {
      "name": "select",
      "type_name": "a.b.c",
      "op_sym": "=",
      "value": "a.b.c {\n    a: 1\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "a",
          "value": {
            "name": "a",
            "type_name": "",
            "op_sym": ":",
            "value": "1",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ],
  "sha": [
    {
      "name": "sha",
      "type_name": "A",
      "op_sym": "=",
      "value": "A {\n    name: \"Hello\"\n    ids: [1, 2, 3]\n    data: {\n        \"a\": {\n            \"b\": {\n                \"c\": 2\n            }\n        }\n    }\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "name",
          "value": {
            "name": "name",
            "type_name": "",
            "op_sym": ":",
            "value": "\"Hello\"",
            "list_items": [],
            "dict_entries": []
          }
        },
        {
          "key": "ids",
          "value": {
            "name": "ids",
            "type_name": "",
            "op_sym": ":",
            "value": "[\n    1\n    2\n    3\n]",
            "list_items": [
              {
                "name": "",
                "type_name": "",
                "op_sym": "",
                "value": "1",
                "list_items": [],
                "dict_entries": []
              },
              {
                "name": "",
                "type_name": "",
                "op_sym": "",
                "value": "2",
                "list_items": [],
                "dict_entries": []
              },
              {
                "name": "",
                "type_name": "",
                "op_sym": "",
                "value": "3",
                "list_items": [],
                "dict_entries": []
              }
            ],
            "dict_entries": []
          }
        },
        {
          "key": "data",
          "value": {
            "name": "data",
            "type_name": "",
            "op_sym": ":",
            "value": "{\n    \"a\": {\n        \"b\": {\n            \"c\": 2\n        }\n    }\n}",
            "list_items": [],
            "dict_entries": [
              {
                "key": "a",
                "value": {
                  "name": "a",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "{\n    \"b\": {\n        \"c\": 2\n    }\n}",
                  "list_items": [],
                  "dict_entries": [
                    {
                      "key": "b",
                      "value": {
                        "name": "b",
                        "type_name": "",
                        "op_sym": ":",
                        "value": "{\n    \"c\": 2\n}",
                        "list_items": [],
                        "dict_entries": [
                          {
                            "key": "c",
                            "value": {
                              "name": "c",
                              "type_name": "",
                              "op_sym": ":",
                              "value": "2",
                              "list_items": [],
                              "dict_entries": []
                            }
                          }
                        ]
                      }
                    }
                  ]
                }
              }
            ]
          }
        }
      ]
    }
  ],
  "shb": [
    {
      "name": "shb",
      "type_name": "B",
      "op_sym": "=",
      "value": "B {\n    a: {\n        name: \"HelloB\"\n        ids: [4, 5, 6]\n        data: {\n            \"d\": {\n                \"e\": {\n                    \"f\": 3\n                }\n            }\n        }\n    }\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "a",
          "value": {
            "name": "a",
            "type_name": "",
            "op_sym": ":",
            "value": "{\n    name: \"HelloB\"\n    ids: [4, 5, 6]\n    data: {\n        \"d\": {\n            \"e\": {\n                \"f\": 3\n            }\n        }\n    }\n}",
            "list_items": [],
            "dict_entries": [
              {
                "key": "name",
                "value": {
                  "name": "name",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "\"HelloB\"",
                  "list_items": [],
                  "dict_entries": []
                }
              },
              {
                "key": "ids",
                "value": {
                  "name": "ids",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "[\n    4\n    5\n    6\n]",
                  "list_items": [
                    {
                      "name": "",
                      "type_name": "",
                      "op_sym": "",
                      "value": "4",
                      "list_items": [],
                      "dict_entries": []
                    },
                    {
                      "name": "",
                      "type_name": "",
                      "op_sym": "",
                      "value": "5",
                      "list_items": [],
                      "dict_entries": []
                    },
                    {
                      "name": "",
                      "type_name": "",
                      "op_sym": "",
                      "value": "6",
                      "list_items": [],
                      "dict_entries": []
                    }
                  ],
                  "dict_entries": []
                }
              },
              {
                "key": "data",
                "value": {
                  "name": "data",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "{\n    \"d\": {\n        \"e\": {\n            \"f\": 3\n        }\n    }\n}",
                  "list_items": [],
                  "dict_entries": [
                    {
                      "key": "d",
                      "value": {
                        "name": "d",
                        "type_name": "",
                        "op_sym": ":",
                        "value": "{\n    \"e\": {\n        \"f\": 3\n    }\n}",
                        "list_items": [],
                        "dict_entries": [
                          {
                            "key": "e",
                            "value": {
                              "name": "e",
                              "type_name": "",
                              "op_sym": ":",
                              "value": "{\n    \"f\": 3\n}",
                              "list_items": [],
                              "dict_entries": [
                                {
                                  "key": "f",
                                  "value": {
                                    "name": "f",
                                    "type_name": "",
                                    "op_sym": ":",
                                    "value": "3",
                                    "list_items": [],
                                    "dict_entries": []
                                  }
                                }
                              ]
                            }
                          }
                        ]
                      }
                    }
                  ]
                }
              }
            ]
          }
        }
      ]
    }
  ],
  "uconfa": [
    {
      "name": "uconfa",
      "type_name": "UnificationConf",
      "op_sym": ":",
      "value": "UnificationConf {\n    name = \"b\"\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "name",
          "value": {
            "name": "name",
            "type_name": "",
            "op_sym": "=",
            "value": "\"b\"",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ],
  "union_list": [
    {
      "name": "union_list",
      "type_name": "",
      "op_sym": "=",
      "value": "[\n    *_list0\n    *_list1\n]",
      "list_items": [
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "*_list0",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "*_list1",
          "list_items": [],
          "dict_entries": []
        }
      ],
      "dict_entries": []
    }
  ]
}
