crates/query/src/snapshots/kclvm_query__tests__list_variables-12.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "dict2.a": [
    {
      "name": "a",
      "type_name": "",
      "op_sym": ":",
      "value": "1",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
