crates/query/src/snapshots/kclvm_query__tests__list_variables-13.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "dict2.b": [
    {
      "name": "b",
      "type_name": "",
      "op_sym": ":",
      "value": "{\n    \"c\": 2\n    \"d\": 3\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "c",
          "value": {
            "name": "c",
            "type_name": "",
            "op_sym": ":",
            "value": "2",
            "list_items": [],
            "dict_entries": []
          }
        },
        {
          "key": "d",
          "value": {
            "name": "d",
            "type_name": "",
            "op_sym": ":",
            "value": "3",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ]
}
