crates/query/src/snapshots/kclvm_query__tests__list_variables-2.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "a1": [
    {
      "name": "a1",
      "type_name": "",
      "op_sym": "=",
      "value": "2",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
