crates/query/src/snapshots/kclvm_query__tests__list_variables-20.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "sha.data.a": [
    {
      "name": "a",
      "type_name": "",
      "op_sym": ":",
      "value": "{\n    \"b\": {\n        \"c\": 2\n    }\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "b",
          "value": {
            "name": "b",
            "type_name": "",
            "op_sym": ":",
            "value": "{\n    \"c\": 2\n}",
            "list_items": [],
            "dict_entries": [
              {
                "key": "c",
                "value": {
                  "name": "c",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "2",
                  "list_items": [],
                  "dict_entries": []
                }
              }
            ]
          }
        }
      ]
    }
  ]
}
