crates/query/src/snapshots/kclvm_query__tests__list_variables-22.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "sha.data.a.b.c": [
    {
      "name": "c",
      "type_name": "",
      "op_sym": ":",
      "value": "2",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
