crates/query/src/snapshots/kclvm_query__tests__list_variables-24.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "shb.a": [
    {
      "name": "a",
      "type_name": "",
      "op_sym": ":",
      "value": "{\n    name: \"HelloB\"\n    ids: [4, 5, 6]\n    data: {\n        \"d\": {\n            \"e\": {\n                \"f\": 3\n            }\n        }\n    }\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "name",
          "value": {
            "name": "name",
            "type_name": "",
            "op_sym": ":",
            "value": "\"HelloB\"",
            "list_items": [],
            "dict_entries": []
          }
        },
        {
          "key": "ids",
          "value": {
            "name": "ids",
            "type_name": "",
            "op_sym": ":",
            "value": "[\n    4\n    5\n    6\n]",
            "list_items": [
              {
                "name": "",
                "type_name": "",
                "op_sym": "",
                "value": "4",
                "list_items": [],
                "dict_entries": []
              },
              {
                "name": "",
                "type_name": "",
                "op_sym": "",
                "value": "5",
                "list_items": [],
                "dict_entries": []
              },
              {
                "name": "",
                "type_name": "",
                "op_sym": "",
                "value": "6",
                "list_items": [],
                "dict_entries": []
              }
            ],
            "dict_entries": []
          }
        },
        {
          "key": "data",
          "value": {
            "name": "data",
            "type_name": "",
            "op_sym": ":",
            "value": "{\n    \"d\": {\n        \"e\": {\n            \"f\": 3\n        }\n    }\n}",
            "list_items": [],
            "dict_entries": [
              {
                "key": "d",
                "value": {
                  "name": "d",
                  "type_name": "",
                  "op_sym": ":",
                  "value": "{\n    \"e\": {\n        \"f\": 3\n    }\n}",
                  "list_items": [],
                  "dict_entries": [
                    {
                      "key": "e",
                      "value": {
                        "name": "e",
                        "type_name": "",
                        "op_sym": ":",
                        "value": "{\n    \"f\": 3\n}",
                        "list_items": [],
                        "dict_entries": [
                          {
                            "key": "f",
                            "value": {
                              "name": "f",
                              "type_name": "",
                              "op_sym": ":",
                              "value": "3",
                              "list_items": [],
                              "dict_entries": []
                            }
                          }
                        ]
                      }
                    }
                  ]
                }
              }
            ]
          }
        }
      ]
    }
  ]
}
